// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/UINTEGER.proto";
import "./PusServiceApid.proto";


package pusModelEditorMessages.protobuf;

message HeaderStructure {
extensions 7 to 107;

  optional ccsds_mal.protobuf.UINTEGER messageType = 1;
  optional ccsds_mal.protobuf.UINTEGER sessionId = 2;
  optional ccsds_mal.protobuf.UINTEGER domainId = 3;
  optional ccsds_mal.protobuf.UINTEGER pusService = 4;
  repeated pusModelEditorMessages.protobuf.PusServiceApid pusServiceApid = 5;
  optional ccsds_mal.protobuf.UINTEGER messageUniqueId = 6;
}
